samples/_failures_safe/1761356256_f8121a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4bdb3567.c: In function ‘main’:
./samples/SAFE/__tmp_4bdb3567.c:179:12: error: missing terminating " character
  179 |     printf("Result
      |            ^~~~~~~
./samples/SAFE/__tmp_4bdb3567.c:179:5: error: expected expression at end of input
  179 |     printf("Result
      |     ^~~~~~
./samples/SAFE/__tmp_4bdb3567.c:179:5: error: expected declaration or statement at end of input
